--- a/index.html
+++ b/index.html
@@ -73,13 +73,27 @@
             </p>
         </div>
 
-        <!-- Right Side: Luxurious Animated Memory Cards -->
+                <!-- Right Side: Floating Luxury Elements -->
         <div class="who-animation">
-            <div class="memory-card card1">A Memory</div>
-            <div class="memory-card card2">A Message</div>
-            <div class="memory-card card3">A Story</div>
+            <div class="floating-container">
+                <div class="floating-element">
+                    <i class="fas fa-history"></i>
+                    <h3>A Memory</h3>
+                    <p>Bringing the past to life with a modern touch.</p>
+                </div>
+                <div class="floating-element">
+                    <i class="fas fa-scroll"></i>
+                    <h3>A Message</h3>
+                    <p>Delivering a nostalgic renaissance to Saudi Arabia.</p>
+                </div>
+                <div class="floating-element">
+                    <i class="fas fa-crown"></i>
+                    <h3>A Story</h3>
+                    <p>Redefining luxury dining, one pizza at a time.</p>
+                </div>
+            </div>
         </div>
-    </div>
+
 </section>
 
 <div class="section-divider"></div>
@@ -207,19 +221,17 @@
 </div>
 
 <div class="section-divider"></div>
-
-<!-- Contact Section -->
-<section class="contact-section" id="contact">
-    <div class="contact-container">
-        <!-- Left Side: Text Content -->
-        <div class="contact-text">
-            <h2>Get in Touch</h2>
-            <p>For reservations, inquiries, or just to say hello, connect with us on social media or WhatsApp.</p>
-            <p>We’d love to hear from you!</p>
+<!-- Simplistic Footer -->
+<footer class="footer-section">
+    <div class="footer-container">
+        <!-- Left: Brand & Description -->
+        <div class="footer-brand">
+            <h2>Memos</h2>
+            <p>Enjoy experience, food, and lifestyle in a luxurious setting.</p>
         </div>
 
-        <!-- Right Side: Contact Info & Social Media -->
-        <div class="contact-info">
+        <!-- Right: Contact & Socials -->
+        <div class="footer-contact">
             <div class="contact-item">
                 <i class="fas fa-phone-alt"></i>
                 <span>+966 50 123 4567</span>
@@ -238,7 +250,13 @@
             </div>
         </div>
     </div>
-</section>
+
+    <!-- Copyright -->
+    <div class="footer-bottom">
+        <p>© 2024 Memos. All rights reserved.</p>
+    </div>
+</footer>
+
 
 <!-- FontAwesome Icons (CDN) -->
 <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
