changes after feedback

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
         <div class="menu-text">
             <h2>INDULGE IN THE ULTIMATE<span></span> PIZZA EXPERIENCE</h2>
             <p>
-                Crafted with passion, precision, and only the finest ingredients, <strong>Memos</strong> is redefining the luxury of pizza. Step into a world where every bite is an unforgettable experience, tailored for those who seek more than just food—they seek perfection.
+                Memos' menu offers an exceptional experience with a selection of exquisite dishes crafted with care from fresh, high-quality ingredients.
+
             </p>
             <a href="https://memos.yallaqrcodes.com" class="menu-button" target="_blank">
                 EXPLORE THE MENU
@@ -118,7 +119,64 @@
     </div>
 </section>
 
+
 <div class="section-divider"></div>
+
+
+<!-- Signature Dishes Section -->
+<section class="who-we-are">
+    <div class="who-container">
+        <!-- Left Side: Text -->
+        <div class="who-text">
+            <h2>OUR DISHES</h2>
+            <p>
+                At Memos, we offer a diverse range of dishes, each one a masterpiece that stands out for its uniqueness and high quality. Carefully crafted, we rely on fresh, premium ingredients to ensure the best taste and performance.
+            </p>
+            <p>
+                At Memos, we are committed to presenting innovative dishes that blend tradition and innovation, delivering flavors that harmonize with refined taste.
+            </p>
+        </div>
+
+        <!-- Right Side: Image -->
+        <div class="menu-image">
+            <img src="image11.jpeg" alt="Signature Dishes at Memos" style="max-width: 100%; border-radius: 20px; box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);">
+        </div>
+    </div>
+</section>
+
+<div class="section-divider"></div>
+
+
+
+<!-- Chef's Expertise Section -->
+<section class="menu-section">
+    <div class="menu-container">
+        <!-- Left Side: Text -->
+        <div class="menu-text">
+            <h2>OUR CRAFT</h2>
+            <p>
+                At Memos, our chef's expertise in crafting Neapolitan pizza is distinguished by precision and craftsmanship.
+            </p>
+            <p>
+                The story begins with the pizza dough, which the chef handles with exceptional care. Through a slow fermentation process lasting 48 hours, the chef allows the dough to transform into a flavorful masterpiece. This process ensures the perfect texture—light, crispy, and firm all at once.
+            </p>
+            <p>
+                The skill goes beyond the meticulous mixing of ingredients, extending to the chef’s careful consideration of each moment while distributing the ingredients evenly across the pizza's surface. Time is allowed to work its magic on the dough, resulting in a taste that satisfies the senses and delights the palate.
+            </p>
+            <p>
+                Drawing inspiration from the authentic Neapolitan tradition, our chef ensures unrivaled quality and taste in every slice.
+            </p>
+        </div>
+
+        <!-- Right Side: Image -->
+        <div class="menu-image">
+            <img src="image10.jpeg" alt="Chef Making Pizza" style="max-width: 100%; border-radius: 20px; box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);">
+        </div>
+    </div>
+</section>
+
+<div class="section-divider"></div>
+
 
 
 <!-- Opening Hours Section -->
@@ -128,11 +186,15 @@
         <div class="hours-text">
             <h2>OPENING HOURS</h2>
             <p>We are open daily from <strong>12:00 PM to 12:00 AM</strong>, bringing you the finest pizza experience.</p>
-            <p>Reserve your table now through the <strong>MyTable</strong> app and indulge in a luxurious dining experience.</p>
+            <p>You can now easily reserve your table through "MyTable." Enjoy a seamless and flexible booking experience that guarantees you a special spot at Memos.</p>
             <a href="https://mytable.sa/widget/reservation" class="book-table-button" target="_blank">
                 BOOK A TABLE
             </a>
         </div>
+                <!-- Right Side: Image -->
+                <div class="menu-image">
+                    <img src="image9.jpeg" alt="Opening Hours Image" style="max-width: 100%; border-radius: 20px; box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);">
+                </div>
     </div>
 </section>
 
