--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <span>contact@memos.com</span>
             </div>
             <div class="social-icons">
-                <a href="https://www.instagram.com" target="_blank" class="social-link">
+                <a href="https://www.instagram.com/memos.ksa" target="_blank" class="social-link">
                     <i class="fab fa-instagram"></i>
                 </a>
                 <a href="https://wa.me/966501234567" target="_blank" class="social-link">
