chnages after meeting

--- a/index.html
+++ b/index.html
@@ -15,34 +15,31 @@
 </head>
 <body>
 
-    <!-- Header -->
-    <header class="main-header">
-        <div class="container">
-            <!-- Logo and Title -->
-            <div class="logo-section">
-                <img src="logo.png" alt="Memos Logo" class="logo">
-                <span class="cafe-name"></span>
-            </div>
-
-            <!-- Navigation Menu -->
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="#about">Who We Are</a></li>
-                    <li><a href="#menu">Menu</a></li>
-                    <li><a href="#hours">Opening Hours</a></li>
-                    <li><a href="#location">Location</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-                <!-- Hamburger Menu -->
-                <div class="hamburger">
-                    <span class="line"></span>
-                    <span class="line"></span>
-                    <span class="line"></span>
-                </div>
-            </nav>
+<!-- Header -->
+<!-- Header -->
+<header class="main-header">
+    <div class="container nav-container">
+      <!-- Logo Left -->
+      <img src="logo.png" alt="Memos Logo" class="logo" />
+  
+      <!-- Nav Right -->
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#about">Who We Are</a></li>
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#location">Location</a></li>
+          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="hamburger">
+          <span class="line"></span>
+          <span class="line"></span>
+          <span class="line"></span>
         </div>
-    </header>
+      </nav>
+    </div>
+  </header>
+  
 
     <!-- Hero Section -->
     <section class="hero">
@@ -70,28 +67,13 @@
             </p>
         </div>
 
-        <!-- Right Side: Floating Luxury Elements -->
-        <div class="who-animation">
-            <div class="floating-container">
-                <div class="floating-element">
-                    <i class="fas fa-history"></i>
-                    <h3>A memory</h3>
-                    <p>Bringing the past to life with a modern touch.</p>
-                </div>
-                <div class="floating-element">
-                    <i class="fas fa-scroll"></i>
-                    <h3>A message</h3>
-                    <p>Delivering a nostalgic renaissance to Saudi Arabia.</p>
-                </div>
-                <div class="floating-element">
-                    <i class="fas fa-crown"></i>
-                    <h3>A story</h3>
-                    <p>Redefining luxury dining, one pizza at a time.</p>
-                </div>
-            </div>
+        <!-- Right Side: Image -->
+        <div class="menu-image">
+            <img src="trans.png" alt="Who We Are Visual" style="max-width: 100%; border-radius: 20px; box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.15);">
         </div>
     </div>
 </section>
+
 
 <div class="section-divider"></div>
 
@@ -179,26 +161,6 @@
 
 
 
-<!-- Opening Hours Section -->
-<section class="opening-hours" id="hours">
-    <div class="hours-container">
-        <!-- Left Side: Text Content -->
-        <div class="hours-text">
-            <h2>OPENING HOURS</h2>
-            <p>We are open daily from <strong>12:00 PM to 12:00 AM</strong>, bringing you the finest pizza experience.</p>
-            <p>You can now easily reserve your table through "MyTable." Enjoy a seamless and flexible booking experience that guarantees you a special spot at Memos.</p>
-            <a href="https://mytable.sa/widget/reservation" class="book-table-button" target="_blank">
-                BOOK A TABLE
-            </a>
-        </div>
-                <!-- Right Side: Image -->
-                <div class="menu-image">
-                    <img src="image9.jpeg" alt="Opening Hours Image" style="max-width: 100%; border-radius: 20px; box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);">
-                </div>
-    </div>
-</section>
-
-<div class="section-divider"></div>
 
 
 
