--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
   </header>
   
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-        </div>
-    </section>
-
-    <div class="section-divider"></div>
-
+<!-- Hero Section -->
+<section class="hero">
+    <div class="hero-content">
+      <h1 class="hero-slogan">Slogan Placeholder</h1>
+    </div>
+  </section>
+  
+  <div class="section-divider"></div>
+  
 
 <!-- Who We Are Section -->
 <section class="who-we-are" id="about">
