fixed image on phone

--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
         </div>
 
         <!-- Right Side: Image -->
-        <div class="menu-image">
-            <img src="trans.png" alt="Who We Are Visual" style="max-width: 100%; border-radius: 20px; box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.15);">
-        </div>
+        <div class="menu-image who-image">
+            <img src="trans.png" alt="Who We Are Visual">
+          </div>
+          
     </div>
 </section>
 
