--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 <!-- Header -->
 <header class="main-header">
     <div class="container nav-container">
-      <!-- Logo Left -->
-      <img src="logo.png" alt="Memos Logo" class="logo" />
-  
-      <!-- Nav Right -->
+      <img src="logo.png" alt="Memos Logo" class="nav-logo" />
       <nav>
         <ul class="nav-links">
           <li><a href="#about">Who We Are</a></li>
@@ -40,12 +37,15 @@
     </div>
   </header>
   
+  
 
 <!-- Hero Section -->
 <section class="hero">
     <div class="hero-content">
-      <h1 class="hero-slogan">Slogan Placeholder</h1>
+        <img src="logo.png" alt="Memos Logo" class="hero-logo" />
+        <h1 class="hero-slogan">EVERY PIECE IS A MASTERPIECE</h1>
     </div>
+    
   </section>
   
   <div class="section-divider"></div>
@@ -167,26 +167,17 @@
 
 
 <!-- Location Section -->
+<!-- Location Section -->
 <section class="location-section" id="location">
-    <div class="location-container">
-        <!-- Left Side: Text Content -->
-        <div class="location-text">
-            <h2>VISIT US<span></span></h2>
-            <p>Experience Memos in the heart of Saudi Arabia. Indulge in our redefined pizza luxury at our fine dining location.</p>
-
-            <a href="https://www.google.com/maps/place/24%C2%B047'18.3%22N+46%C2%B038'51.5%22E" class="directions-button" target="_blank">
-                GET DIRECTIONS
-            </a>
-        </div>
-
-        <!-- Right Side: Clickable Image (Replaces iframe) -->
-        <div class="location-map">
-            <a href="https://www.google.com/maps/place/24%C2%B047'18.3%22N+46%C2%B038'51.5%22E" target="_blank">
-                <img src="maps.jpg" alt="Memos Location Map" class="google-map">
-            </a>
-        </div>
+    <div class="location-text-only">
+        <h2>VISIT US<span></span></h2>
+        <p>Experience Memos in the heart of Saudi Arabia. Indulge in our redefined pizza luxury at our fine dining location.</p>
+        <a href="https://www.google.com/maps/place/24%C2%B047'18.3%22N+46%C2%B038'51.5%22E" class="directions-button" target="_blank">
+            GET DIRECTIONS
+        </a>
     </div>
 </section>
+
 
 <div class="section-divider"></div>
 
@@ -235,7 +226,7 @@
         <div class="footer-contact">
             <div class="contact-item">
                 <i class="fas fa-phone-alt"></i>
-                <span>+966 50 123 4567</span>
+                <span>+966 50 940 9751</span>
             </div>
             <div class="contact-item">
                 <i class="far fa-envelope"></i>
@@ -245,7 +236,7 @@
                 <a href="https://www.instagram.com/memos.ksa" target="_blank" class="social-link">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="https://wa.me/966501234567" target="_blank" class="social-link">
+                <a href="https://wa.me/+966509409751" target="_blank" class="social-link">
                     <i class="fab fa-whatsapp"></i>
                 </a>
             </div>
