--- a/index.html
+++ b/index.html
@@ -228,6 +228,12 @@
                 <i class="fas fa-phone-alt"></i>
                 <span>+966 50 940 9751</span>
             </div>
+            <div class="contact-item">
+                <i class="fas fa-envelope"></i>
+                <span>memosksaoffice@gmail.com</span>
+            </div>
+        </div>
+        
         
             <div class="social-icons">
                 <a href="https://www.instagram.com/memos.ksa" target="_blank" class="social-link">
