--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <section class="hero">
     <div class="hero-content">
         <img src="logo.png" alt="Memos Logo" class="hero-logo" />
-        <h1 class="hero-slogan">EVERY PIECE IS A MASTERPIECE</h1>
+        <h1 class="hero-slogan">Every Piece is a Masterpiece</h1>
     </div>
     
   </section>
