--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!-- Hero Section -->
 <section class="hero">
     <div class="hero-content">
-        <img src="logo.png" alt="Memos Logo" class="hero-logo" />
+        <img src="drawing.PNG" alt="Memos Logo" class="hero-logo" />
         <h1 class="hero-slogan">Every Piece is a Masterpiece</h1>
     </div>
     
