--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <!-- Right Side: Image -->
         <div class="menu-image who-image">
-            <img src="trans.jpg" alt="Who We Are Visual">
+            <img src="image15.jpeg" alt="Who We Are Visual">
           </div>
           
     </div>
